# orpheusmorebetter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  orpheusmorebetter  pyproject.toml  requirements.txt  setup.py  start.sh  tagging.py  torrent-crawl.py  torrent-done.py  torrent-parse.py  transcode.py  whatapi.py
.github/workflows/: build-and-test.yml  docker-build.yml
models/: __init__.py  artist.py  encoder.py  exceptions.py  format.py  formats.py  torrent.py  torrentgroup.py
services/: qbittorrent.py  tagging.py  torrent-crawl.py  torrent-done.py  transcode.py  whatapi.py
src/: torrent-crawl.py  torrent-done.py  torrent-parse.py  transcode.py  whatapi.py
tests/: test_format.py  test_tagging.py  test_tracknumbers.py  test_transcode.py
