[project]
name = "OrpheusMoreBetter"
version = "1.0.0"
requires-python = ">=3.10"

[project.scripts]
orpheusmorebetter = "orpheusmorebetter:main"

[tool.pytest.ini_options]
addopts = [ "--import-mode=importlib", ]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
beautifulsoup4 = "^4.14.3"
mutagen = "^1.47.0"
requests = "^2.32.5"
setuptools = "^82.0.0"
lxml = "^6.0.2"
pydantic = "^2.12.5"
